--- a/style.css
+++ b/style.css
@@ -1,10 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+*{
+    margin: 0;
+    padding: 0;
+}
 .work-sans {
     font-family: 'Work Sans', sans-serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+}
+
+main > section{
+    margin-top: 130px;
 }
 
 :root{
@@ -13,6 +21,15 @@
     --text-light-gray: #727272;
     --bg-light: rgba(255, 144, 14, 0.1);
     --btn-primary-bg: #ff900e;
+}
+h1,h2,h3,h4{
+    color: var(--text-gray);
+    font-weight: 700;
+    font-size: 2.7rem;
+}
+p, .p{
+    font-weight: 400;
+    color: var(--text-light-gray);
 }
 .display-flex{
     display: flex;
@@ -32,11 +49,11 @@
     font-size: 3rem;
 }
 .navbar{
+    padding: 20px 0 20px;
     justify-content: space-between;
     align-items: center;
-    margin-top: 0;
 }
-.navbar, .banner{
+.navbar, .banner, main{
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -59,6 +76,7 @@
 }
 
 
+
 .banner-content{
     max-width: 850px;
     margin: 0 auto;
@@ -66,6 +84,7 @@
     margin-bottom: 50px;
 }
 .banner-title{
+    padding-top: 125px;
     font-size: 3.5rem;
     font-weight: 700;
     margin-bottom: 20px;
@@ -73,6 +92,122 @@
 .banner-image{
     width: 100%;
 }
+.banner-description{
+    font-size: 1.2rem;
+    margin-bottom: 30px;
+    color: var(--text-light-gray);
+}
+
+
+
+
+
+/* team and features  */
+.teams{
+    align-items: center;
+    margin-bottom: 130px;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+}
+.our-features{
+    margin-left: 70px;
+    max-width: 530px;
+}
+
+.our-features h3{
+    font-size: 2.7rem;
+    margin-bottom: 25px;
+}
+.our-features #quick{
+    color: var(--text-light-gray);
+    font-weight: 500;
+}
+.our-features span{
+    color: var(--btn-primary-bg);
+}
+.feature-description{
+    margin-bottom: 25px;
+}
+
+
+
+
+
+
+
+
+/*facts*/
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin: 130px 0;
+}
+.facts p{
+    margin-top: 20px;
+    max-width: 550px;
+    line-height: 25px;
+}
+.fact-card{
+    margin: 0 auto;
+    width: 240px;
+    height: 240px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--btn-primary-bg);
+    border-radius: 8px;
+}
+.fact-card h4{
+    margin-top: 7px;
+    margin-bottom: 7px;
+    font-weight: 600;
+}
+.fact-card p{
+    font-weight: 600;
+}
+.fact-card img{
+    width: 30%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -81,11 +216,93 @@
 
 /* responsive design */
 @media screen and (max-width: 576px) {
-    .navbar,  .nav-links{
+    .navbar,  
+    .nav-links, 
+    .teams{
         flex-direction: column;
         text-align: center;
+        overflow: hidden;
+    }
+    .banner-content{
+        padding: 0 15px;
     }
     .banner-title{
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
+    .banner-description{
+        font-size: 1rem;
+    }
+    .our-features{
+        margin-left: 0;
+        margin-top: 30px;
+        max-width: 100%;
+    }
+    .our-features h3{
+        font-size: 2rem;
+        margin: 0 auto;
+        width: 280px;
+    }
+    .feature-description{
+        font-size: 1rem;
+    }
+    .team-img-container, .facts-container{
+        grid-template-columns: 1fr;
+    }
+    .facts h3{
+        text-align: center;
+    }
+    .facts p{
+        text-align: center;
+        max-width: 500px;
+    }
+    .facts-container{
+        margin-top: 70px;
+    }
+
+}
+
+
+/* medium responsive design */
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .navbar,  
+    .nav-links, 
+    .teams{
+        flex-direction: column;
+        overflow: hidden;
+    }
+    .nav-links{
+        text-align: center;
+        }
+    .banner-content{
+        padding: 0 15px;
+    }
+    .our-features{
+        margin-top: 50px;
+        margin-left: -175px;
+    }
+    .facts h3, .facts p{
+        margin-left: 7px;
+    }
+    .fact-card h4{
+        margin-top: 4px;
+        margin-bottom: 0;
+        font-weight: 600;
+    }
+    .fact-card p{
+        margin-top: 5px;
+        margin-left: 0;
+        font-weight: 600;
+    }
+    .fact-card img{
+        width: 30%;
+    }
+    .fact-card{
+        width: 190px;
+        height: 190px;
+    }
+    .facts-container{
+        grid-template-columns: repeat(4,1fr);
+        gap: 10px;
+    }
+
 }
