--- a/style.css
+++ b/style.css
@@ -176,7 +176,21 @@ p, .p{
 
 
 
+.sponsor-info{
+    max-width: 560px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    justify-items: center;
+    margin-bottom: 30px;
+}
 
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 
 
 
@@ -245,18 +259,26 @@ p, .p{
     .feature-description{
         font-size: 1rem;
     }
-    .team-img-container, .facts-container{
+    .team-img-container, .facts-container, .sponsor-companies{
         grid-template-columns: 1fr;
     }
-    .facts h3{
+    .facts h3, .our-sponsors h3{
+        font-size: 2rem;
         text-align: center;
     }
     .facts p{
         text-align: center;
         max-width: 500px;
     }
-    .facts-container{
-        margin-top: 70px;
+    .facts-container, .sponsor-companies{
+        /* margin-top: 70px; */
+        justify-content: center;
+        gap: 20px;
+    }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 30px;
+        margin-bottom: 30px;
     }
 
 }
@@ -296,13 +318,13 @@ p, .p{
     .fact-card img{
         width: 30%;
     }
-    .fact-card{
-        width: 190px;
-        height: 190px;
-    }
     .facts-container{
-        grid-template-columns: repeat(4,1fr);
+        grid-template-columns: repeat(3,1fr);
         gap: 10px;
+    }
+    .sponsor-companies{
+        grid-template-columns: repeat(3,1fr);
+        gap: 40px;
     }
 
 }
