--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ main > section{
     --primary-color: #2563eb;
     --text-gray: #424242;
     --text-light-gray: #727272;
-    --bg-light: rgba(255, 144, 14, 0.1);
+    --bg-light: #FFF4E7;
     --btn-primary-bg: #ff900e;
 }
 h1,h2,h3,h4{
@@ -43,6 +43,12 @@ p, .p{
 }
 .bg-light{
     background-color: var(--bg-light);
+}
+.text-center{
+    text-align: center;
+}
+header{
+    padding-bottom: 50px;
 }
 .brand{
     font-weight: 700;
@@ -134,7 +140,49 @@ p, .p{
 
 
 
-
+/*feature section*/
+.features{
+    gap: 80px;
+}
+.features-container p{
+    margin-top: 15px;
+    margin-bottom: 16px;
+}
+#feature-title{
+    padding-left: 20px;
+    border-left: 5px solid var(--btn-primary-bg);
+}
+.features-container{
+    max-width: 586px;
+}
+.features-card{
+    margin-top: 15px;
+    padding: 35px 25px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+}
+.features-card .features-card-title{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+#experience-badge{
+    padding: 45px 42px;
+    margin-top: -100px;
+    margin-left: -35px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.feature-architect img{
+    width: 100%;
+}
+button span{
+    font-weight: 500;
+    font-size: 1.5rem
+}
 
 
 
@@ -197,7 +245,11 @@ p, .p{
 
 
 
-
+.footer{
+    padding: 40px 0;
+    margin-bottom: 214px;
+    background-color: #FFF4E7;
+}
 
 
 
@@ -231,7 +283,8 @@ p, .p{
 /* responsive design */
 @media screen and (max-width: 576px) {
     .navbar,  
-    .nav-links, 
+    .nav-links,
+    .features, 
     .teams{
         flex-direction: column;
         text-align: center;
@@ -262,8 +315,13 @@ p, .p{
     .team-img-container, .facts-container, .sponsor-companies{
         grid-template-columns: 1fr;
     }
+    #experience-badge{
+        padding: 20px 30px;
+        margin-top: -50px;
+        margin-left: 0px;
+    }
     .facts h3, .our-sponsors h3{
-        font-size: 2rem;
+        /* font-size: 2rem; */
         text-align: center;
     }
     .facts p{
@@ -279,6 +337,11 @@ p, .p{
         justify-items: center;
         gap: 30px;
         margin-bottom: 30px;
+    }
+    
+    .footer p{
+        max-width: 345px;
+        margin: 0 auto;
     }
 
 }
@@ -302,6 +365,24 @@ p, .p{
         margin-top: 50px;
         margin-left: -175px;
     }
+    .features{
+        gap:20px;
+    }
+    .features-container{
+        max-width: 420px;
+    }
+    .features-card {
+        margin-top: 0;
+        padding: 20px;
+    }
+    .feature-architect{
+        margin-top: 228px;
+    }
+    #experience-badge{
+    padding: 30px 32px;
+    margin-top: -65px;
+    margin-left: 60px;
+}
     .facts h3, .facts p{
         margin-left: 7px;
     }
